--- a/gb/nsc413_2.md
+++ b/gb/nsc413_2.md
@@ -1,12 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/kjeqw2335/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kjeqw2335/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11728275.md#1" target="_blank">大马前总理卷入新案 涉下令谋杀蒙古模特</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11728275.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/GettyImages-991185274-150x120.jpg" align ="left"></a>深陷腐败指控的马来西亚前总理纳吉布·拉扎克（Najib Razak），近日又被卷入了一桩谋杀蒙古模特的丑闻。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 9:30 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727147.md#1" target="_blank">【翻墙必看】PCC雇用薄瓜瓜“令人吃惊”</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727147.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/08/1204120831291758-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
-
-1.薄熙来之子薄瓜瓜 最新行踪曝光
-在公众视野中消失了很久的薄熙来的儿子——薄瓜瓜，正在加拿大鲍尔集团股份有限公司（Power Corporation of Canada，简称 PCC）工作。有人认为，PCC雇用薄瓜瓜是为了保持和中共权贵的关系。
-
-2.中共走投无路 军队押送“中美协议”过关
-经过18个月的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 9:26 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11728023.md#1" target="_blank">大陆阿胶需求不减 未来5年世界毛驴将减半</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11728023.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/G21A1808-150x120.jpg" align ="left"></a>位于英国的慈善机构The Donkey Sanctuary日前表示，因大陆对阿胶的需求不减，如果不加以控制，未来5年，全球一半的毛驴都要被宰杀，而且将影响5亿贫困人口的生活。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 7:40 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727619.md#1" target="_blank">惠誉下调澳门评级展望</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727619.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/01/1701170854291758-150x120.jpg" align ="left"></a>惠誉日前发表的评级报告将澳门的评级展望由“稳定”下调至“负面”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 5:04 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727105.md#1" target="_blank">美银美林：美国大选后贸易战或再次升级</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727105.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/000_1GC5EJ-600x400-1-1-150x120.jpg" align ="left"></a>国际投行美银美林日前发布报告表示，现在预期美中达成第一阶段贸易协议后会令贸易战持续降级为时尚早，美中贸易和技术方面之战可能在大选后再次升级。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 3:48 PM							</td></tr>
@@ -34,6 +26,7 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726623.md#1" target="_blank">拟高价买下高以翔遗作 浙江卫视遭剧作方拒绝</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726623.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1604100956401487-150x120.jpg" align ="left"></a>35岁的台湾艺人高以翔在大陆录制浙江卫视的综艺节目骤逝后，追思会于12月15日在台北殡仪馆举行，许多亲友到场送他最后一程，场面哀戚。其遗作《怪你过分美丽》的出品方“恒星引力”CEO在微博发文悼念时，高以翔的粉丝留言请求不要卖新剧给浙江卫视，该CEO回复“不会的”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 6:28 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726774.md#1" target="_blank">爆料：港惩教署精神病院押送大批“犯人”</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726774.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/9fd135e6c3413e282970338692a56144-150x120.jpg" align ="left"></a>12月16日，有消息人士向《大纪元时报》爆料，指小榄精神病治疗中心扩建的同时，连日来至少见证两次在附近大规模封路、戒严，同时押送犯人，每次时间长达半个钟头，其中有被封闭得密不透风的警车散发出极为刺鼻、类似腐肉臭味，疑有被拘捕的“反送中”抗争者被送入精神病院注射“懵仔针”，以及有“犯人”在精神病院被弄死后秘密送走。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 6:25 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726708.md#1" target="_blank">709律师李春富遭边控 质问当局怕什么</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726708.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/DBx3xzJU0AAdTez-150x120.jpeg" align ="left"></a>12月16日，大陆维权律师李春富对外发布消息说，他在云南景洪口岸遭到中共警方拦截，被限制出境。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 5:56 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726651.md#1" target="_blank">11月房价下跌城市再增 京广二手房续跌</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726651.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/1411080052482663-600x400-1-150x120.jpg" align ="left"></a>中共国家统计局12月16日公布数据显示，11月份新建和二手商品住宅价格下跌的城市数量继续增加、价格上涨城市继续减少。中国房企年末为了销量纷纷降价售房，北京甚至出现20%的降幅，但实际销售量仍然不佳。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 5:48 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727611.md#1" target="_blank">河南许昌公安局副局长彭杰投案被调查</a><br></h3>12月17日，官方通报，许昌市公安局党委委员、副局长、正县级侦查员彭杰涉嫌严重违纪违法，已主动投案，目前正接受调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 7:31 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727202.md#1" target="_blank">浙江矿山塌方2千平方米厂房被埋 3人失踪</a><br></h3>12月17日10时后，浙江省丽水市松阳县新兴镇安露源机制砂有限公司矿山突然塌方，2000余平方米厂房被掩埋，导致3人失踪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 6:39 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727802.md#1" target="_blank">四川少年在家中自杀 父亲看到其生前漫画崩溃</a><br></h3>12月9日，四川绵阳市三台县芦溪镇广华寺村12岁少年刘少军在家中上吊身亡。在整理儿子遗物时，父亲刘明照被儿子生前所画的一副描绘学生不堪老师暴力而自尽的漫画所震惊。联想到儿子入殓时身上有伤痕，刘明照觉得儿子遭受了校园暴力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 4:47 PM							</td></tr>
@@ -41,5 +34,6 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727172.md#1" target="_blank">每日三退声明精选（2019/12/16）</a><br></h3>看透中共邪教了。法轮功学员根本就没做错什么啊，就这么对待别人。看到整个共产邪教根本就是想着如何灭掉别人的自由，很邪恶，决定在这里公开退出共匪党团队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 11:39 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727111.md#1" target="_blank">贵州发生煤矿事故 致14人死亡2人被困</a><br></h3>据陆媒报导，12月17日1时30分许，贵州安龙县广隆煤矿发生一起煤与瓦斯突出事故。经初步核实，当班井下作业人员23人，7人安全升井。截至9时，事故造成14人死亡，2人被困。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 11:25 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/17/n11727038.md#1" target="_blank">港人乘穿梭巴士往澳门 被珠海公安带走</a><br></h3>大陆公安证实一名本港男子，上周五乘坐前往澳门的港珠澳大桥穿梭巴士，在东人工岛被公安带走，声称其涉及7年前的手机走私案。民主党立法会议员涂谨申，批评大陆擅自在东人工岛设置检查站，犹如设新“送中”陷阱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 9:58 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/16/n11726385.md#1" target="_blank">武汉78岁法轮功学员汪文清面临非法起诉</a><br></h3>11月22日，武汉市黄陂区姚集派出所警察闯入78岁法轮功学员汪文清的家，要求他在事先打印好的所谓“笔录”上签字，企图非法起诉他，汪文清拒签。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 5:52 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_2.md#1<br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_2.htm">http://www.epochtimes.com/gb/nsc413_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
